# vetted-legal-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
docs/: architecture.md
examples/: basic_query.py
src/vetted_legal_ai/: __init__.py
src/vetted_legal_ai/api/: routes.py
src/vetted_legal_ai/audit/: __init__.py  logger.py
src/vetted_legal_ai/rag/: __init__.py  context_assembler.py  embedder.py  retriever.py
src/vetted_legal_ai/validation/: __init__.py  citation_validator.py  confidence_scorer.py
tests/: test_placeholder.py
