[project]
name = "vetted-legal-ai"
version = "0.1.0"
description = "RAG engine with citation validation, confidence scoring, and audit logs for legal AI"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["legal-ai", "rag", "citation-validation", "justice"]
dependencies = [
    "langchain>=0.2",
    "chromadb>=0.4",
    "fastapi>=0.110",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
